syntax = "proto3";

package greet;

option go_package = "./proto";

message GreetRequest {
    string first_name =1;
}

message GreetResponse {
    string result =1;
}

service GreetService{
    rpc Greet(GreetRequest)returns (GreetResponse);
    rpc GreetManyTimes(GreetRequest) returns( stream GreetResponse);
    rpc LongGreet(stream GreetRequest) returns (stream GreetResponse);
    rpc GreetEveryOne(stream GreetRequest) returns (stream GreetResponse);
}

// Generate code: $ protoc -Iproto --go_out=. --go_opt=paths=import --go-grpc_out=. proto/greet.proto
